--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 	<meta charset="utf-8">
 	<title>MySite</title>
 </head>
@@ -40,6 +41,35 @@
 					<div class="pf-images"></div>
 					<div class="pf-images"></div>
 					<div class="pf-images"></div>
+				</div>
+			</div>
+		</section>
+		<section class="feature">
+			<div class="ft-content">
+				<div class="ft-text">
+					<h2>Feature</h2>
+					<p>
+						It is a long established fact that a reader will be distracted by the readable<br>
+						content of a page when looking at its layout.<br>
+						The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+					</p>
+				</div>
+				<div class="strength-box clearfix">
+					<div class="strength">
+						<i class="fas fa-code"></i>
+						<h3>Strength1</h3>
+						<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+					</div>
+					<div class="strength">
+						<i class="fas fa-desktop"></i>
+						<h3>Strength2</h3>
+						<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+					</div>
+					<div class="strength">
+						<i class="fas fa-cogs"></i>
+						<h3>Strength3</h3>
+						<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+					</div>
 				</div>
 			</div>
 		</section>
