--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<link rel="stylesheet" href="stylesheet.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>MySite</title>
 </head>
 <body>
@@ -17,6 +18,11 @@
 					<li class="navlist"><a href="">Contact</a></li>
 				</ul>
 			</nav>
+			<div class="humberger">
+				<div></div>
+				<div></div>
+				<div></div>
+			</div>
 		</div>
 	</header><!-- /header -->
 	<main>
@@ -73,5 +79,61 @@
 				</div>
 			</div>
 		</section>
+		<section class="profile">
+			<div class="profile-box">
+				<div class="profile-text">
+					<h2>Profile</h2>
+					<p>
+						It is a long established fact that a reader will be distracted by the readable<br>
+						content of a page when looking at its layout.<br>
+						The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+					</p>
+				</div>
+				<div class="clearfix">
+					<div class="profile-icon">
+						<img class="profile-image", src="img/my-icon.jpg">
+					</div>
+					<div class="profile-content">
+						<h3>Myname</h3>
+						<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+						<h3>MySkils</h3>
+						<p>HTML/CSS,JavaScript,JQuery,PhotoShop</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="contact">
+			<div class="contact-box">
+				<div class="contact-text">
+					<h2>Contact</h2>
+					<p>
+						It is a long established fact that a reader will be distracted by the readable<br>
+						content of a page when looking at its layout.<br>
+						The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+					</p>
+				</div>
+				<div class="clearfix">
+					<div class="contact-info">
+						<div class="contact-info-text">
+							<h3>Mail</h3>
+							<a href="">xxx@xxx.com</a>
+							<h3>Tel</h3>
+							<a href="">000-0000-0000</a>
+						</div>
+					</div>
+					<div class="sns">
+						<div class="sns-text">
+							<h3>SNS</h3>
+							<i class="fab fa-facebook-f"></i>
+							<i class="fab fa-twitter"></i>
+							<i class="fab fa-instagram"></i>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<footer>
+			<p>©︎ 2017 WebCamp</p>
+		</footer>
 	</main>
 </body>
